; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/msi/extr_msiquery.c_VIEW_find_column.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/msi/extr_msiquery.c_VIEW_find_column.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { %struct.TYPE_6__* }
%struct.TYPE_6__ = type { i64 (%struct.TYPE_7__*, i32*, i64*)*, i64 (%struct.TYPE_7__*, i64, i64*, i32*, i32*, i64*)* }

@ERROR_SUCCESS = common dso_local global i64 0, align 8
@ERROR_INVALID_PARAMETER = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @VIEW_find_column(%struct.TYPE_7__* %0, i64 %1, i64 %2, i64* %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca %struct.TYPE_7__*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  %12 = alloca i64, align 8
  %13 = alloca i64, align 8
  %14 = alloca i64, align 8
  %15 = alloca i32, align 4
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %6, align 8
  store i64 %1, i64* %7, align 8
  store i64 %2, i64* %8, align 8
  store i64* %3, i64** %9, align 8
  %16 = load %struct.TYPE_7__*, %struct.TYPE_7__** %6, align 8
  %17 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %16, i32 0, i32 0
  %18 = load %struct.TYPE_6__*, %struct.TYPE_6__** %17, align 8
  %19 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %18, i32 0, i32 0
  %20 = load i64 (%struct.TYPE_7__*, i32*, i64*)*, i64 (%struct.TYPE_7__*, i32*, i64*)** %19, align 8
  %21 = load %struct.TYPE_7__*, %struct.TYPE_7__** %6, align 8
  %22 = call i64 %20(%struct.TYPE_7__* %21, i32* null, i64* %13)
  store i64 %22, i64* %14, align 8
  %23 = load i64, i64* %14, align 8
  %24 = load i64, i64* @ERROR_SUCCESS, align 8
  %25 = icmp ne i64 %23, %24
  br i1 %25, label %26, label %28

26:                                               ; preds = %4
  %27 = load i64, i64* %14, align 8
  store i64 %27, i64* %5, align 8
  br label %72

28:                                               ; preds = %4
  store i64 1, i64* %12, align 8
  br label %29

29:                                               ; preds = %67, %28
  %30 = load i64, i64* %12, align 8
  %31 = load i64, i64* %13, align 8
  %32 = icmp sle i64 %30, %31
  br i1 %32, label %33, label %70

33:                                               ; preds = %29
  %34 = load %struct.TYPE_7__*, %struct.TYPE_7__** %6, align 8
  %35 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %34, i32 0, i32 0
  %36 = load %struct.TYPE_6__*, %struct.TYPE_6__** %35, align 8
  %37 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %36, i32 0, i32 1
  %38 = load i64 (%struct.TYPE_7__*, i64, i64*, i32*, i32*, i64*)*, i64 (%struct.TYPE_7__*, i64, i64*, i32*, i32*, i64*)** %37, align 8
  %39 = load %struct.TYPE_7__*, %struct.TYPE_7__** %6, align 8
  %40 = load i64, i64* %12, align 8
  %41 = call i64 %38(%struct.TYPE_7__* %39, i64 %40, i64* %10, i32* null, i32* null, i64* %11)
  store i64 %41, i64* %14, align 8
  %42 = load i64, i64* %14, align 8
  %43 = load i64, i64* @ERROR_SUCCESS, align 8
  %44 = icmp ne i64 %42, %43
  br i1 %44, label %45, label %47

45:                                               ; preds = %33
  %46 = load i64, i64* %14, align 8
  store i64 %46, i64* %5, align 8
  br label %72

47:                                               ; preds = %33
  %48 = load i64, i64* %7, align 8
  %49 = load i64, i64* %10, align 8
  %50 = call i32 @strcmpW(i64 %48, i64 %49)
  store i32 %50, i32* %15, align 4
  %51 = load i64, i64* %8, align 8
  %52 = icmp ne i64 %51, 0
  br i1 %52, label %53, label %59

53:                                               ; preds = %47
  %54 = load i64, i64* %8, align 8
  %55 = load i64, i64* %11, align 8
  %56 = call i32 @strcmpW(i64 %54, i64 %55)
  %57 = load i32, i32* %15, align 4
  %58 = or i32 %57, %56
  store i32 %58, i32* %15, align 4
  br label %59

59:                                               ; preds = %53, %47
  %60 = load i32, i32* %15, align 4
  %61 = icmp ne i32 %60, 0
  br i1 %61, label %66, label %62

62:                                               ; preds = %59
  %63 = load i64, i64* %12, align 8
  %64 = load i64*, i64** %9, align 8
  store i64 %63, i64* %64, align 8
  %65 = load i64, i64* @ERROR_SUCCESS, align 8
  store i64 %65, i64* %5, align 8
  br label %72

66:                                               ; preds = %59
  br label %67

67:                                               ; preds = %66
  %68 = load i64, i64* %12, align 8
  %69 = add nsw i64 %68, 1
  store i64 %69, i64* %12, align 8
  br label %29

70:                                               ; preds = %29
  %71 = load i64, i64* @ERROR_INVALID_PARAMETER, align 8
  store i64 %71, i64* %5, align 8
  br label %72

72:                                               ; preds = %70, %62, %45, %26
  %73 = load i64, i64* %5, align 8
  ret i64 %73
}

declare dso_local i32 @strcmpW(i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
